improve contrast and make sure to use correct theme color

--- a/plugins/CoreHome/angularjs/alert/alert.directive.less
+++ b/plugins/CoreHome/angularjs/alert/alert.directive.less
@@ -78,21 +78,21 @@ body #content .alert-info p {
 }
 
 body #content .alert-warning p {
-  color: #f57c00;
+  color: #fbf7f1;
 }
 
 .alert-warning {
-  color: #f57c00;
-  border-color: #f57c00;
+  color: #fbf7f1;
+  border-color: #fbf7f1;
   &:before {
     content: "\e621";
-    color: #f57c00;
+    color: #fbf7f1;
   }
   p {
-    color: #f57c00;
+    color: #fbf7f1;
   }
   a {
-    color: #f57c00;
+    color: #fbf7f1;
     text-decoration: underline;
     &:hover {
       text-decoration: underline;
