--- a/plugins/CoreHome/angularjs/notification/notification.directive.less
+++ b/plugins/CoreHome/angularjs/notification/notification.directive.less
@@ -31,7 +31,7 @@
   }
   &.notification-warning {
     .alert-warning;
-    background-color: #f57c00;
+    background-color: #fbf7f1;
     color: #fff4e3 !important;
     &:before, p, a {
       color: #fff4e3;
