--- a/plugins/Marketplace/stylesheets/marketplace.less
+++ b/plugins/Marketplace/stylesheets/marketplace.less
@@ -8,7 +8,7 @@
     }
 
     .icon-warning {
-        color: #f57c00;
+        color: #fbf7f1;
     }
     .subscriptionName,
     .subscriptionType,
